gitops/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-prod
  namespace: production
spec:
  selector:
    matchLabels:
      app: web-server-prod
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: web-server-prod
    spec:
      containers:
      - name: web-server-prod
        image: sprimetzhofer/jku-cloudnative:prod
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-staging-deployment
  namespace: staging
spec:
  selector:
    matchLabels:
      app: web-server-staging
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: web-server-staging
    spec:
      containers:
      - name: web-server-staging
        image: sprimetzhofer/jku-cloudnative:staging
        ports:
        - containerPort: 8082
