gitops/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-production
  namespace: production
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 8080
    targetPort: 8080
