gitops/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-prod
  namespace: production
spec:
  selector:
    app.kubernetes.io/name: web-server-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-server-staging
  namespace: staging
spec:
  selector:
    app.kubernetes.io/name: web-server-staging
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: 80
