gitops/ingress.yaml
# custom web-server
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-prod-ingress
  namespace: production
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-server-prod
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-staging-ingress
  namespace: staging
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-server-staging
              port:
                number: 80
